--- a/templates/apache-vhost-default.erb
+++ b/templates/apache-vhost-default.erb
@@ -1,13 +1,13 @@
 <VirtualHost *:80>
 	ServerAdmin support@informatique.gov.pf
-	ServerName <%= name %>
-	DocumentRoot /var/www/<%= vapps %>
+	ServerName <%= @name %>
+	DocumentRoot /var/www/<%= @vapps %>
 
-	ErrorLog ${APACHE_LOG_DIR}/<%= vapps %>-error.log
+	ErrorLog ${APACHE_LOG_DIR}/<%= @vapps %>-error.log
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
-	CustomLog ${APACHE_LOG_DIR}/<%= vapps %>-access.log combined
+	CustomLog ${APACHE_LOG_DIR}/<%= @vapps %>-access.log combined
 </VirtualHost>
